--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "pdfkit": "^0.11.0"
   }
 }
